# SIGNET_FORGE

./: .clang-format  .editorconfig  .gitignore  .gitleaks.toml  .lsan_suppressions.txt  CHANGELOG.md  CITATION.cff  CLA.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  LICENSE_COMMERCIAL  README.md  SECURITY.md  _pre-commit-hook.sh  mull.yml  pyproject.toml  vcpkg.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/CLA/: corporate-cla.md  individual-cla.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  codeql.yml  docs.yml  sbom.yml  wheels.yml
Benchmarking_Protocols/: BENCHMARK_ID_REGISTRY.md  CMakeLists.txt  DOCKER_UBUNTU_RESULTS.md  README.md  bench_phase10_roundtrip.cpp  bench_phase2_write.cpp  bench_phase3_read.cpp  bench_phase4_predicate.cpp  bench_phase5_wal.cpp  bench_phase6_features.cpp  bench_phase7_ai.cpp  bench_phase8_compliance.cpp  bench_phase9_interop.cpp  benchmark_id_registry.tsv  common.hpp  compression_sizes.cpp
Benchmarking_Protocols/scripts/: prepare_data.sh  run_full_suite.sh
benchmarks/: bench_encodings.cpp  bench_event_bus.cpp  bench_feature_store.cpp  bench_read.cpp  bench_wal.cpp  bench_write.cpp
dev/bench/: data.js
docs/: BENCHMARKING_ORIGIN_AND_RELEVANCE.md  BENCHMARKS.md  FIPS_SECURITY_POLICY.md  PRODUCT_OVERVIEW.md  QUALITY_ASSURANCE.md  TEST_AND_BENCHMARK_REFERENCE.md
docs/user/: AI_FEATURES.md  API_REFERENCE.md  APPLICATIONS.md  COMPRESSION_GUIDE.md  PQ_CRYPTO_GUIDE.md  PRODUCTION_SETUP.md  QUICKSTART.md
doxygen/: header.html  mainpage.md
examples/: basic_read.cpp  basic_write.cpp  csv_to_parquet.cpp  ticks_import.cpp  ticks_query.cpp  ticks_wal_stream.cpp
ffi/: signet_forge.h  signet_forge_c.cpp
fuzz/: fuzz_aes_gcm.cpp  fuzz_arrow_import.cpp  fuzz_delta_decoder.cpp  fuzz_hkdf.cpp  fuzz_key_metadata.cpp  fuzz_parquet_reader.cpp  fuzz_pme.cpp  fuzz_rle_decoder.cpp  fuzz_thrift_decoder.cpp  fuzz_wal_reader.cpp  fuzz_x25519.cpp
include/signet/: column_index.hpp  column_reader.hpp  column_writer.hpp  error.hpp  forge.hpp  memory.hpp  mmap_reader.hpp  reader.hpp  schema.hpp  statistics.hpp  types.hpp  writer.hpp  z_order.hpp
include/signet/ai/: audit_chain.hpp  column_batch.hpp  data_classification.hpp  decision_log.hpp  event_bus.hpp  feature_reader.hpp  feature_writer.hpp  human_oversight.hpp  incident_response.hpp  inference_log.hpp  log_retention.hpp  mpmc_ring.hpp  quantized_vector.hpp  regulatory_monitor.hpp  row_lineage.hpp  streaming_sink.hpp  tensor_bridge.hpp  threat_model.hpp  vector_type.hpp  wal.hpp  wal_mapped_segment.hpp
include/signet/ai/compliance/: compliance_types.hpp  eu_ai_act_reporter.hpp  mifid2_reporter.hpp
include/signet/bloom/: split_block.hpp  xxhash.hpp
include/signet/compression/: codec.hpp  gzip.hpp  lz4.hpp  snappy.hpp  zstd.hpp
include/signet/crypto/: aes_core.hpp  aes_ctr.hpp  aes_gcm.hpp  cipher_interface.hpp  hkdf.hpp  hsm_client_stub.hpp  key_metadata.hpp  kms_local.hpp  pme.hpp  pme_facade.hpp  post_quantum.hpp  sha256.hpp  sha512.hpp
include/signet/encoding/: byte_stream_split.hpp  delta.hpp  dictionary.hpp  rle.hpp
include/signet/interop/: arrow_bridge.hpp  numpy_bridge.hpp  onnx_bridge.hpp
include/signet/thrift/: compact.hpp  types.hpp
packaging/conan/: conanfile.py
packaging/conan/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
packaging/conda/: bld.bat  build.sh  meta.yaml
packaging/homebrew/: signet-forge.rb
packaging/vcpkg/: portfile.cmake  vcpkg.json
python/signet_forge/: __init__.py  _bindings.cpp
python/tests/: test_property_based.py  test_python_bindings.py
rust/signet-forge/: Cargo.toml
rust/signet-forge-sys/: Cargo.toml  build.rs
rust/signet-forge-sys/src/: lib.rs
rust/signet-forge/src/: enums.rs  error.rs  lib.rs  options.rs  reader.rs  schema.rs  writer.rs
rust/signet-forge/tests/: roundtrip.rs
scripts/: bootstrap_ci_evaluation_license.sh  render_benchmark_registry.sh  run_benchmarks.sh  signet_local_commercial_run.sh  update_benchmark_registry.sh  validate_benchmark_registry.sh
tests/: test_api_compatibility.cpp  test_audit_chain.cpp  test_bloom.cpp  test_bloom_vectors.cpp  test_boundary_constants.cpp  test_compliance_reports.cpp  test_compression.cpp  test_crypto_vectors.cpp  test_csv.cpp  test_encoding.cpp  test_encoding_vectors.cpp  test_encryption.cpp  test_event_bus.cpp  test_feature_store.cpp  test_gap_pass12.cpp  test_interop.cpp  test_page_index.cpp  test_property_based.cpp  test_resilience.cpp  test_roundtrip.cpp  test_tensor_bridge.cpp  test_thrift_snappy_vectors.cpp  test_thrift_types.cpp  test_ticks_pipeline.cpp  test_vector_type.cpp  test_wal.cpp  test_z_order.cpp
tools/: signet_cli.cpp
wasm/: demo.html  sample.parquet  signet_wasm.cpp
