[package]
name = "signet-forge-sys"
version = "0.1.0"
edition = "2021"
authors = ["Johnson Ogundeji"]
license = "AGPL-3.0-or-later"
description = "Raw FFI bindings to the Signet Forge C API (libsignet_forge_c)"
repository = "https://github.com/SIGNETSTACK/signet-forge"
readme = "README.md"
links = "signet_forge_c"

[build-dependencies]
cmake = "0.1"

[features]
default = []
commercial = []
